--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.1.0",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
     "query-string": "^8.1.0",
