--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "^20",
