--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
-
-version: '3'
+version: '3.8'
 services:
-  sturent-ui-dev:
+  frontend-dev:
     build: .
     ports:
-      - "3005:3005"
+      - 3000:3000
     volumes:
        - .:/app
         - /app/node_modules
