--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
@@ -19,6 +20,7 @@
     "date-fns": "^3.1.0",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
+    "next-themes": "^0.2.1",
     "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
