--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "react-icons": "^4.12.0",
     "react-redux": "^9.1.0",
     "react-toastify": "^10.0.1",
+    "redux": "^5.0.1",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7",
-    "zustand": "^4.4.7"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.17.22",
