--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
+    "react-photoswipe-gallery": "^3.0.1",
     "react-redux": "^9.1.0",
     "react-toastify": "^10.0.1",
     "redux": "^5.0.1",
