feat: added missing library and update image height and width

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
+    "photoswipe": "^5.4.3",
     "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
