--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.1.0",
     "class-variance-authority": "^0.7.0",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "date-fns": "^3.1.0",
