--- a/package.json
+++ b/package.json
@@ -24,11 +24,16 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.1.0",
+    "@types/leaflet": "^1.9.12",
+    "@types/react-leaflet": "^3.0.0",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "date-fns": "^3.1.0",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
+    "leaflet-geosearch": "^4.0.0",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
@@ -39,6 +44,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
+    "react-leaflet": "^4.2.1",
     "react-photoswipe-gallery": "^3.0.1",
     "react-redux": "^9.1.0",
     "react-toastify": "^10.0.1",
