--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-redux": "^9.1.0",
     "react-toastify": "^10.0.1",
     "redux": "^5.0.1",
+    "swiper": "^11.1.3",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.6"
